tests/snapshots/examples_fixtures/advanced__grade_analyzer.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/advanced/grade_analyzer.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/advanced/grade_analyzer.flx:24:26
   |
24 |     let (total, count) = fold(scores, (0.0, 0.0), /(acc, x) -> (acc.0 + x, acc.1 + 1.0))
   |                          ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `total`.

  examples/advanced/grade_analyzer.flx:25:5
   |
25 |     total / count
   |     ^^^^^

Hint:
  Define it first: let total = ...;


error[E300]: Type Mismatch

I found a type mismatch.

  examples/advanced/grade_analyzer.flx:57:18
   |
57 |         "grade": grade,
   |                  ^^^^^
   |                  ----- this expression has type `Grade`

   |                  ----- this type mismatch is reported here

Note:
  expected type: Float
  found type: Grade
  the conflicting types meet at this expression

Help:
  These two types are not compatible.
  Suppressed 1 nearby duplicate E300 diagnostic(s).


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/advanced/grade_analyzer.flx:63:5
   |
63 |     fold(students, {}, /(acc, s) ->
   |     ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/advanced/grade_analyzer.flx:72:9
   |
72 |     len(filter(to_list(Map.values(results)), /r -> r["passed"] == Some(true)))
   |         ^^^^^^

Hint:
  Define it first: let filter = ...;


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/advanced/grade_analyzer.flx:76:9
   |
76 |     len(filter(to_list(Map.values(results)), /r -> r["passed"] == Some(false)))
   |         ^^^^^^

Hint:
  Define it first: let filter = ...;


error[E300]: Type Mismatch

I found a type mismatch.

  examples/advanced/grade_analyzer.flx:105:31
    |
105 |         make_student("Alice", [92.0, 88.0, 95.0, 91.0]),
    |                               ^^^^^^^^^^^^^^^^^^^^^^^^
    |                               ------------------------ this expression has type `List<Float>`

    |                               ------------------------ this type mismatch is reported here

Note:
  expected type: String
  found type: List<Float>
  the conflicting types meet at this expression

Help:
  These two types are not compatible.


error[E300]: Argument Type Mismatch

I found the wrong type in the 2nd argument to `make_student`.

  examples/advanced/grade_analyzer.flx:105:31
    |
 19 | fn make_student(name, scores) {
 20 |     {"name": name, "scores": scores}
 21 | }
 22 | 
 23 | fn average(scores) {
... |
103 | fn main() with IO {
104 |     let students = [
105 |         make_student("Alice", [92.0, 88.0, 95.0, 91.0]),
    |                               ^^^^^^^^^^^^^^^^^^^^^^^^
    |                               ------------------------ this argument has type `List<Float>`

Note:
  expected argument type: String
  found argument type: List<Float>
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `String` value as the 2nd argument.
  Suppressed 1 nearby duplicate E300 diagnostic(s).


error[E300]: Argument Type Mismatch

I found the wrong type in the 2nd argument to `make_student`.

  examples/advanced/grade_analyzer.flx:107:33
    |
 19 | fn make_student(name, scores) {
 20 |     {"name": name, "scores": scores}
 21 | }
 22 | 
 23 | fn average(scores) {
... |
105 |         make_student("Alice", [92.0, 88.0, 95.0, 91.0]),
106 |         make_student("Bob", [78.0, 82.0, 75.0, 80.0]),
107 |         make_student("Charlie", [95.0, 98.0, 92.0, 97.0]),
    |                                 ^^^^^^^^^^^^^^^^^^^^^^^^
    |                                 ------------------------ this argument has type `List<Float>`

Note:
  expected argument type: String
  found argument type: List<Float>
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `String` value as the 2nd argument.
  Suppressed 1 nearby duplicate E300 diagnostic(s).


error[E300]: Argument Type Mismatch

I found the wrong type in the 2nd argument to `make_student`.

  examples/advanced/grade_analyzer.flx:109:29
    |
 19 | fn make_student(name, scores) {
 20 |     {"name": name, "scores": scores}
 21 | }
 22 | 
 23 | fn average(scores) {
... |
107 |         make_student("Charlie", [95.0, 98.0, 92.0, 97.0]),
108 |         make_student("Diana", [65.0, 70.0, 68.0, 72.0]),
109 |         make_student("Eve", [55.0, 60.0, 48.0, 52.0]),
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^
    |                             ------------------------ this argument has type `List<Float>`

Note:
  expected argument type: String
  found argument type: List<Float>
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `String` value as the 2nd argument.

Found 10 errors.
== stdout ==
<not executed>
